--- a/fin.html
+++ b/fin.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/assets/fin.css">
+    <link rel="stylesheet" href="assets/fin.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil</title>
@@ -18,7 +18,7 @@
 
     
 
-    <script src="/assets/fin.js"></script>
+    <script src="assets/fin.js"></script>
 </body>
 </html>
 
