--- a/index_LBC.html
+++ b/index_LBC.html
@@ -83,7 +83,7 @@
             <button id="toggleButton">Réduire</button>
         </div>
 
-        <form  action="fin.html" method="post">
+        <form  action="fin.html" method="get">
 
         <div class="flex-row">
             <div class="flex-column columnVille first-column">
